--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <!--main-->
 
     <main>
-        <!--Slider-->
+        <!--Slider 1-->
 
         <div class="container-fluid p-0">
             <div class="site-slider">
@@ -149,6 +149,52 @@
                 </div>
             </div>
         </div>
+        <!--/Slider 1-->
+
+        <!--Slider 2-->
+
+        <div class="container-fluid">
+            <div class="site-slider-two px-md-4">
+                <div class="row slider-two text-center">
+                    <div class="col-md-2 product pt-md-5 pt-4">
+                        <img src="./imagenes/imagenes2/audifonos.png" alt="Producto 1">
+                        <span class="border site-btn">AUDIFONO</span>
+                    </div>
+                    <div class="col-md-2 product pt-md-5 pt-4">
+                        <img src="./imagenes/imagenes2/iPhone.png" alt="Producto 2">
+                        <span class="border site-btn">IPHONE</span>
+                    </div>
+                    <div class="col-md-2 product pt-md-5 pt-4">
+                        <img src="./imagenes/imagenes2/mouse1.png" alt="Producto 3">
+                        <span class="border site-btn">MOUSE</span>                        
+                    </div>
+                    <div class="col-md-2 product pt-md-5 pt-4">
+                        <img src="./imagenes/imagenes2/notebook2.png" alt="Producto 4">
+                        <span class="border site-btn">NOTEBOOK</span>
+                    </div>
+                    <div class="col-md-2 product pt-md-5 pt-4">
+                        <img src="./imagenes/imagenes2/parlantep.png" alt="Producto 5">
+                        <span class="border site-btn">PARLANTE</span>
+                    </div>
+                    <div class="col-md-2 product pt-md-5 pt-4">
+                        <img src="./imagenes/imagenes2/smartwatch.png" alt="Producto 6">
+                        <span class="border site-btn">SMARTWATCH</span>
+                    </div>
+                </div>
+
+                <div class="slider-btn">
+                    <span class="prev position-top">
+                        <i class="fas fa-chevron-left fa-2x text-secondary"></i>
+                    </span>
+                    <span class="next prev position-top right-0">
+                        <i class="fas fa-chevron-right fa-2x text-secondary"></i>
+                    </span>
+                </div>
+
+            </div>
+        </div>
+
+
 
 
 
