creación de formulario

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-md-4 col-sm-12 col-12">
+                <div class="col-md-4 col-sm-12 col-12 col-20">
                     <div class="btn-group"> <button class="btn border dropdown-toggle my-md-4 my-2 text-white" 
                         data-toggle="dropdown" 
                         aria-haspopup="true"
@@ -133,7 +133,7 @@
             <div class="site-slider">
                 <div class="slider-one">
                     <div>
-                        <img src="./imagenes/celular1.jpg" class="img-fluid" alt="Banner1" />
+                        <img src="./imagenes/celular1.png" class="img-fluid" alt="Banner1" />
                     </div>
                     <div>
                         <img src="./imagenes/note2.jpg" class="img-fluid" alt="Banner2" />
@@ -157,27 +157,27 @@
             <div class="site-slider-two px-md-4">
                 <div class="row slider-two text-center">
                     <div class="col-md-2 product pt-md-5 pt-4">
-                        <img src="./imagenes/imagenes2/audifonos.png" alt="Producto 1">
+                        <img src="./imagenes/imagenes2/audifonos.png" class="img-fluid" alt="Product 1">
                         <span class="border site-btn">AUDIFONO</span>
                     </div>
                     <div class="col-md-2 product pt-md-5 pt-4">
-                        <img src="./imagenes/imagenes2/iPhone.png" alt="Producto 2">
+                        <img src="./imagenes/imagenes2/iPhone.png" class="img-fluid" alt="Product 2">
                         <span class="border site-btn">IPHONE</span>
                     </div>
                     <div class="col-md-2 product pt-md-5 pt-4">
-                        <img src="./imagenes/imagenes2/mouse1.png" alt="Producto 3">
+                        <img src="./imagenes/imagenes2/mouse1.png" class="img-fluid" alt="Product 3">
                         <span class="border site-btn">MOUSE</span>                        
                     </div>
                     <div class="col-md-2 product pt-md-5 pt-4">
-                        <img src="./imagenes/imagenes2/notebook2.png" alt="Producto 4">
+                        <img src="./imagenes/imagenes2/notebook2.png" class="img-fluid" alt="Product 4">
                         <span class="border site-btn">NOTEBOOK</span>
                     </div>
                     <div class="col-md-2 product pt-md-5 pt-4">
-                        <img src="./imagenes/imagenes2/parlantep.png" alt="Producto 5">
+                        <img src="./imagenes/imagenes2/parlantep.png" class="img-fluid" alt="Product 5">
                         <span class="border site-btn">PARLANTE</span>
                     </div>
                     <div class="col-md-2 product pt-md-5 pt-4">
-                        <img src="./imagenes/imagenes2/smartwatch.png" alt="Producto 6">
+                        <img src="./imagenes/imagenes2/smartwatch.png" class="img-fluid" alt="Product 6">
                         <span class="border site-btn">SMARTWATCH</span>
                     </div>
                 </div>
@@ -194,11 +194,96 @@
             </div>
         </div>
 
-
-
-
-
         <!--/Slider-->
+
+        <hr class="hr">
+
+        <!---Sección2Carasteristicas-->
+
+        <div class="container text-center">
+            <div class="features">
+                <h1>Carasteristicas de los productos</h1>
+                <p class="text-secondary">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. A cum id ratione assumenda modi omnis ut earum possimus eius, amet illo repellat rerum. 
+                </p>
+            </div>
+        </div>
+
+        
+        <div class="container-fluid">
+            <div class="site-slider-three" px-md-4>
+                <div class="slider-three row text-center">
+                    <div class="col-md-2 profuct pt-md-5">
+                        <img src="./imagenes/imagenes3/alexa.png" class="img-fluid" alt="Image1">
+                        <div class="cart-details">
+                            <h6 class="pro-title p-0">Amazon Echo</h6>
+                            <div class="rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="pro-price py-2">
+                                <h5>
+                                    <small><s class="text-secondary">$129.990</s></small>
+                                    <span>$120.000</span>
+                                </h5>
+                            </div>
+                            <div class="cart mt-4">
+                                <button class="border site-btn btn-span">Agregar al carro</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2 profuct pt-md-5">
+                        <img src="./imagenes/imagenes3/Huawei-nova.png" class="img-fluid" alt="Image2">
+                        <div class="cart-details">
+                            <h6 class="pro-title p-0">Huewei Nova</h6>
+                            <div class="rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>                                
+                            </div>
+                            <div class="pro-price py-2">
+                                <h5>
+                                    <small><s class="text-secondary">$359.990</s></small>
+                                    <span>$3250.000</span>
+                                </h5>
+                            </div>
+                            <div class="cart mt-4">
+                                <button class="border site-btn btn-span">Agregar al carro</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2 profuct pt-md-5">
+                        <img src="./imagenes/imagenes3/LCD.png" class="img-fluid" alt="Image3">
+                        <div class="cart-details">
+                            <h6 class="pro-title p-0">LED Samsung</h6>
+                            <div class="rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>                                
+                            </div>
+                            <div class="pro-price py-2">
+                                <h5>
+                                    <small><s class="text-secondary">$539.990</s></small>
+                                    <span>$500.000</span>
+                                </h5>
+                            </div>
+                            <div class="cart mt-4">
+                                <button class="border site-btn btn-span">Agregar al carro</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!---/Sección2Carasteristicas-->
 
     </main>
 <!--/main-->
