cambio de imagenes

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 </div>
                 <div class="col-md-4 col-12 text-right">
                     <p class="my-md-4 header-links">
-                        <a href="#" class="px-2">Ingresar</a>
-                        <a href="#" class="px-1">Crear Cuenta</a> 
+                        <a href="./login.html" class="px-2">Ingresar</a>
+                        <a href="./form.html" class="px-1">Crear Cuenta</a> 
                     </p>
                 </div>
 
