--- a/login.html
+++ b/login.html
@@ -119,7 +119,7 @@
 
         <div class="login-box">
             <img src="./imagenes/Login/perfil-avatar-hombre-icono-redondo_24640-14044.png" class="avatar" alt="Avatar Image">
-            <h1>Login Here</h1>
+            <h1>Inicio de sesión</h1>
             <form>
               <!-- USERNAME INPUT -->
               <label for="username">Usuario</label>
