--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item active">
-                      <a class="nav-link" href="#">INICIO <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="/index.html">INICIO <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">FEATURES</a>
@@ -200,6 +200,8 @@
 
         <!---Sección2Carasteristicas-->
 
+        <!--"Features"-->
+
         <div class="container text-center">
             <div class="features">
                 <h1>Productos en Oferta</h1>
@@ -209,11 +211,12 @@
             </div>
         </div>
 
-        
+       <!--Slider 3--> 
+
         <div class="container-fluid">
-            <div class="site-slider-three" px-md-4>
-                <div class="slider-three row text-center">
-                    <div class="col-md-2 profuct pt-md-5">
+            <div class="site-slider-three px-md-4">
+                <div class="slider-three row text-center px4">
+                    <div class="col-md-2 product pt-md-5">
                         <img src="./imagenes/imagenes3/alexa.png" class="img-fluid" alt="Image1">
                         <div class="cart-details">
                             <h6 class="pro-title p-0">Amazon Echo</h6>
@@ -235,10 +238,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2 profuct pt-md-5">
+                    <div class="col-md-2 product pt-md-5">
                         <img src="./imagenes/imagenes3/Huawei-nova.png" class="img-fluid" alt="Image2">
                         <div class="cart-details">
-                            <h6 class="pro-title p-0">Huewei Nova</h6>
+                            <h6 class="pro-title p-0">Huawei Nova</h6>
                             <div class="rating">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -256,7 +259,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2 profuct pt-md-5">
+                    <div class="col-md-2 product pt-md-5">
                         <img src="./imagenes/imagenes3/LCD.png" class="img-fluid" alt="Image3">
                         <div class="cart-details">
                             <h6 class="pro-title p-0">LED Samsung</h6>
@@ -278,7 +281,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2 profuct pt-md-5">
+                    <div class="col-md-2 product pt-md-5">
                         <img src="./imagenes/imagenes3/plays.png" class="img-fluid" alt="Image4">
                         <div class="cart-details">
                             <h6 class="pro-title p-0">Consola PS4 1TB</h6>
@@ -301,7 +304,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2 profuct pt-md-5">
+                    <div class="col-md-2 product pt-md-5">
                         <img src="./imagenes/imagenes3/xbox1.png" class="img-fluid" alt="Image4">
                         <div class="cart-details">
                             <h6 class="pro-title p-0">Consola Xbox One S 1TB</h6>
@@ -324,7 +327,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2 profuct pt-md-5">
+                    <div class="col-md-2 product pt-md-5">
                         <img src="./imagenes/imagenes3/teclado.png" class="img-fluid" alt="Image4">
                         <div class="cart-details">
                             <h6 class="pro-title p-0">Teclado mecánico Logitech</h6>
@@ -346,13 +349,140 @@
                                 <button class="border site-btn btn-span">Agregar al carro</button>
                             </div>
                         </div>
+                   
+                    </div>
+                </div>
+                <div class="slider-btn">
+                    <span class="prev position-top">
+                        <i class="fas fa-chevron-left fa-2x text-secondary"></i>
+                    </span>
+                    <span class="next prev position-top right-0">
+                        <i class="fas fa-chevron-right fa-2x text-secondary"></i>
+                    </span>
+                </div>
+            </div>
+        </div>
+      <!--/Slider 3--> 
+
+        <!---/Sección2Carasteristicas-->
+
+        <!----"sofa Section"-->
+
+        <div class="container-fluid sofa bg-light">
+            <div class="row">
+                <div class="col-md-6 col-12">
+                    <div class="row box">
+                        <div class="col-md-2 p-0 pl-md-3 bg-white offset-1 d-flex flex-md-column flex-sm-row">
+                            <div class="py-md-2">
+                                <div class="py-md-2 py-2 mt-3 bg-white border text-center">
+                                    <h5 class="primary-color"><strong>125</strong></h5>
+                                    <em>Días</em>
+                                </div>
+                                <div class="py-md-2 py-2 mt-3 bg-white border text-center">
+                                    <h5 class="primary-color"><strong>5</strong></h5>
+                                    <em>Horas</em>
+                                </div>
+                                <div class="py-md-2 py-2 mt-3 bg-white border text-center">
+                                    <h5 class="primary-color"><strong>45</strong></h5>
+                                    <em>Minutos</em>
+                                </div>
+                                <div class="py-md-2 py-2 mt-3 bg-white border text-center">
+                                    <h5 class="primary-color"><strong>13</strong></h5>
+                                    <em>Segundos</em>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="text-left">
+                                <img src="./imagenes/imagenes5/hp-allinone.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-12 pt-5">
+                    <h4 class="text-left">HP All In One</h4>
+                    <p class="text-secondary pr-5 pt-3">
+                        <small>
+                           Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                           Necessitatibus nisi molestiae cum dolorum amet ullam, 
+                           illum pariatur repudiandae in esse beatae, 
+                           ab temporibus assumenda architecto voluptatem aspernatur 
+                           ad aliquid suscipit. 
+                        </small>
+                    </p>
+                    <div class="rating lightblue">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>                        
+                    </div>
+                    <h4 class="pt-2">
+                        <small><s class="text-secondary">$750.000</s></small>
+                        <span class="text-color">$520.990</span>
+                    </h4>
+                    <div class="cart mt-4 row">
+                        <div class="col-md-4 col-sm-12 p-0">
+                            <button class="border site-btn btn-span bg-primary-color text-white">
+                                Agregar al carro
+                            </button>
+
+                        </div>
+                        <div class="col-md-5 col-sm-12 p-0 mt-3">
+                            <span class="p-3 bg-white border rounded-circle"><i class="far fa-heart"></i></span>
+                            <span class="p-3 bg-white border rounded-circle"><i class="far fa-sync-alt"></i></span>
+                            <span class="p-3 bg-white border rounded-circle"><i class="far fa-search"></i></span>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
+        <!----/"sofa Section"-->
 
-        <!---/Sección2Carasteristicas-->
+
+        <div class="container-fluid">
+            <div class="site-slider-four px-md-4">
+                <div class="slider-four row text-center">
+                    <div class="col-md-2 product pt-md-5">
+                        <img src="imagenes/imagenes6/Occulus.png">                        
+                    </div>
+                    <div class="col-md-2 product pt-md-5">
+                        <img src="imagenes/imagenes6/xbox.png">                        
+                    </div>
+                    <div class="col-md-2 product pt-md-5">
+                        <img src="imagenes/imagenes6/audifono_samsung.png">                        
+                    </div>
+                    <div class="col-md-2 product pt-md-5">
+                        <img src="imagenes/imagenes6/iPad.png">                        
+                    </div>
+                    <div class="col-md-2 product pt-md-5">
+                        <img src="imagenes/imagenes6/ryzen.png">                        
+                    </div>
+                </div>
+                <div class="slider-btn">
+                    <span class="prev position-top">
+                        <i class="fas fa-chevron-left fa-2x text-secondary"></i>
+                    </span>
+                    <span class="next prev position-top right-0">
+                        <i class="fas fa-chevron-right fa-2x text-secondary"></i>
+                    </span>
+                </div>
+            </div>
+        </div>
+
+        <div class="container my-5">
+            <div class="row">
+                <div class="col-md-8">
+                    <img src="" class="">
+                </div>
+                <div class="col-md-4"></div>
+            </div>
+        </div>
+
+
+
 
 
         <!---Facilites-->
