se agrega carrito de compas v1

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="col-md-4 col-12 text-right">
                     <p class="my-md-4 header-links">
                         <a href="./login.html" class="px-2">Ingresar</a>
-                        <a href="./form.html" class="px-1">Crear Cuenta</a> 
+                        <a href="./formulario.html" class="px-1">Crear Cuenta</a> 
                     </p>
                 </div>
 
@@ -80,13 +80,13 @@
                       <a class="nav-link" href="/index.html">INICIO <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">FEATURES</a>
+                      <a class="nav-link" href="./catalogo.html">CATÁLOGO</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">COLLECTION</a>
+                      <a class="nav-link" href="#">CONDICIONES DE DESPACHO</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">SHOP</a>
+                        <a class="nav-link" href="#">OFERTAS</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">NOSOTROS</a>
@@ -134,9 +134,6 @@
                 <div class="slider-one">
                     <div>
                         <img src="./imagenes/celular1.jpg" class="img-fluid" alt="Banner1" />
-                    </div>
-                    <div>
-                        <img src="./imagenes/note2.jpg" class="img-fluid" alt="Banner2" />
                     </div>
                     <div>
                         <img src="./imagenes/note3.jpg" class="img-fluid" alt="Banner3" />
@@ -610,6 +607,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/carrito.js"></script>
+    <script src="./js/pedido.js"></script>
+    <script src="./js/compra.js"></script>
+    <script src="js/sweetalert2.min.js"></script>
+
     
 </body>
 </html>
