cambios en login

--- a/catalogo.html
+++ b/catalogo.html
@@ -153,8 +153,8 @@
                         <h4 class="my-0 font-weight-bold">HP PAVILION</h4>
                     </div>
                     <div class="card-body">
-                        <img src="img/hp1.jpg" class="card-img-top">
-                        <h1 class="card-title pricing-card-title precio">S/. <span class="">5000</span></h1>
+                        <img src="./imagenes/imgcatalogo/hp1.jpg" class="card-img-top">
+                        <h1 class="card-title pricing-card-title precio">$ <span class="">500000</span></h1>
 
                         <ul class="list-unstyled mt-3 mb-4">
                             <li></li>
@@ -171,8 +171,8 @@
                         <h4 class="my-0 font-weight-bold">ACER </h4>
                     </div>
                     <div class="card-body">
-                        <img src="img/acer.jpg" class="card-img-top">
-                        <h1 class="card-title pricing-card-title precio">S/. <span class="">3000</span></h1>
+                        <img src="./imagenes/imgcatalogo/acer.jpg" class="card-img-top">
+                        <h1 class="card-title pricing-card-title precio">$ <span class="">300000</span></h1>
 
                         <ul class="list-unstyled mt-3 mb-4">
                             <li></li>
@@ -190,7 +190,7 @@
                     </div>
                     <div class="card-body">
                         <img src="img/lenovo.jpg" class="card-img-top">
-                        <h1 class="card-title pricing-card-title precio">S/. <span class="">4000</span></h1>
+                        <h1 class="card-title pricing-card-title precio">$ <span class="">400000</span></h1>
 
                         <ul class="list-unstyled mt-3 mb-4">
                             <li></li>
@@ -212,7 +212,7 @@
                     </div>
                     <div class="card-body">
                         <img src="img/apple.jpg" class="card-img-top">
-                        <h1 class="card-title pricing-card-title precio">S/. <span class="">5900</span></h1>
+                        <h1 class="card-title pricing-card-title precio">$ <span class="">590000</span></h1>
 
                         <ul class="list-unstyled mt-3 mb-4">
                             <li></li>
@@ -230,7 +230,7 @@
                     </div>
                     <div class="card-body">
                         <img src="img/huawei.jpg" class="card-img-top">
-                        <h1 class="card-title pricing-card-title precio">S/. <span class="">5769</span></h1>
+                        <h1 class="card-title pricing-card-title precio">$ <span class="">576900</span></h1>
 
                         <ul class="list-unstyled mt-3 mb-4">
                             <li></li>
@@ -248,7 +248,7 @@
                     </div>
                     <div class="card-body">
                         <img src="img/samsung.jpg" class="card-img-top">
-                        <h1 class="card-title pricing-card-title precio">S/. <span class="">2599</span></h1>
+                        <h1 class="card-title pricing-card-title precio">$ <span class="">259900</span></h1>
 
                         <ul class="list-unstyled mt-3 mb-4">
                             <li></li>
@@ -270,7 +270,7 @@
                     </div>
                     <div class="card-body">
                         <img src="img/lg.jpg" class="card-img-top">
-                        <h1 class="card-title pricing-card-title precio">S/. <span class="">4299</span></h1>
+                        <h1 class="card-title pricing-card-title precio">$ <span class="">429900</span></h1>
 
                         <ul class="list-unstyled mt-3 mb-4">
                             <li></li>
@@ -288,7 +288,7 @@
                     </div>
                     <div class="card-body">
                         <img src="img/advance.jpg" class="card-img-top">
-                        <h1 class="card-title pricing-card-title precio">S/. <span class="">869</span></h1>
+                        <h1 class="card-title pricing-card-title precio">$ <span class="">86900</span></h1>
 
                         <ul class="list-unstyled mt-3 mb-4">
                             <li></li>
@@ -306,7 +306,7 @@
                     </div>
                     <div class="card-body">
                         <img src="img/dell.jpg" class="card-img-top">
-                        <h1 class="card-title pricing-card-title precio">S/. <span class="">5397</span></h1>
+                        <h1 class="card-title pricing-card-title precio">$ <span class="">539700</span></h1>
 
                         <ul class="list-unstyled mt-3 mb-4">
                             <li></li>
@@ -450,23 +450,6 @@
             </div>
         </div>
         
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     <script src="js/jquery-3.4.1.min.js"></script>
