--- a/compra.html
+++ b/compra.html
@@ -135,9 +135,9 @@
                                     <!-- <th scope="col"></th> -->
                                 </tr>
                                 <tr>
-                                    <th colspan="4" scope="col" class="text-right">IGV :</th>
+                                    <th colspan="4" scope="col" class="text-right">iva :</th>
                                     <th scope="col">
-                                        <p id="igv"></p>
+                                        <p id="iva"></p>
                                     </th>
                                     <!-- <th scope="col"></th> -->
                                 </tr>
@@ -294,15 +294,6 @@
         
         
             </footer>
-
-
-
-
-
-
-
-
-
 
 
         </div>
