--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
                         aria-haspopup="true"
                         aria-expanded="false">CL</button>
     
-                        <div class="dropdown-menu">
-                            <a href="#" class="dropdown-item">USA - USD</a>
-                        </div>
+
                     </div>
                    
                 </div>
@@ -77,7 +75,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item active">
-                      <a class="nav-link" href="/index.html">INICIO <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="./index.html">INICIO <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="./catalogo.html">CATÁLOGO</a>
