nuevas funcionalidades seguridad}

--- a/login.html
+++ b/login.html
@@ -164,7 +164,7 @@
 
               <input type="submit" value="Log In">
               
-              <a href="#">¿Olvidó su contraseña?</a><br>
+              <a href="./solicitudc.html">¿Olvidó su contraseña?</a><br>
               <a href="./formulario.html">Crear Cuenta</a>
             </form>
           </div>
