cambios en login

--- a/login.html
+++ b/login.html
@@ -158,7 +158,7 @@
               <!-- contraseña -->
 
               <label for="password">Contraseña</label>
-              <input type="password" name="password" placeholder="Digite su contraseña">
+              <input type="password" id="password" placeholder="Digite su contraseña">
               
               <!--Boton de ingreso-->
 
@@ -320,6 +320,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/login.js"></script>
     
 </body>
 </html>
