--- a/recuperacion.html
+++ b/recuperacion.html
@@ -151,7 +151,7 @@
                 <h3>
                      Ingrese sus datos para la recuperación.
                 </h3>
-                <input type="text" id="nombreUsuario" placeholder="Nombre Usuario" onkeypress="return validarCaracteres(event)" onblur="limpiar()" required>
+                <input type="text" id="nombreUsuario" placeholder="Nombre Usuario" required>
                 <input type="cc-number" id="codigo" placeholder="introduzca codigo de verificación" required>
                 <input type="password" id="pass" placeholder="Ingrese nueva contraseña" required>
 
@@ -302,6 +302,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/recuperacion.js"></script>
     
 </body>
 </html>
