--- a/boleta.html
+++ b/boleta.html
@@ -43,6 +43,7 @@
                 <th scope="col" id="nombreProducto">Nombre producto</th>
                 <th scope="col" id="descripcion">Descripción</th>
                 <th scope="col" id="precio">Precio</th>
+                <th scope="col" id="cantidad">Cantidad</th>
               </tr>
             </thead>
             <tbody>
