--- a/boleta.html
+++ b/boleta.html
@@ -38,6 +38,8 @@
                 <th scope="col" id="nBoleta"></th>
                 <th scope="col">Dirección despacho</th>
                 <th scope="col" id="despacho"></th>
+                <th scope="col">Nombre Cliente</th>
+                <th scope="col" id="despacho"></th>
               <tr>
                 <th scope="col" id="codigo">código producto</th>
                 <th scope="col" id="nombreProducto">Nombre producto</th>
