--- a/compra.html
+++ b/compra.html
@@ -96,7 +96,7 @@
             <div class="row mt-3">
                 <div class="col">
                     <h2 class="d-flex justify-content-center mb-3">Realizar Compra</h2>
-                    <form id="procesar-pago" action="#" method="post">
+                    <form id="procesar-pago">
                         <div class="form-group row">
                             <label for="cliente" class="col-12 col-md-2 col-form-label h2">Cliente :</label>
                             <div class="col-12 col-md-10">
@@ -127,21 +127,21 @@
 
                                 </tbody>
                                 <tr>
-                                    <th colspan="4" scope="col" class="text-right">SUB TOTAL :</th>
+                                    <th colspan="4" scope="col" class="text-right">SUB TOTAL $ :</th>
                                     <th scope="col">
                                         <p id="subtotal"></p>
                                     </th>
                                     <!-- <th scope="col"></th> -->
                                 </tr>
                                 <tr>
-                                    <th colspan="4" scope="col" class="text-right">iva :</th>
+                                    <th colspan="4" scope="col" class="text-right">iva $ :</th>
                                     <th scope="col">
                                         <p id="iva"></p>
                                     </th>
                                     <!-- <th scope="col"></th> -->
                                 </tr>
                                 <tr>
-                                    <th colspan="4" scope="col" class="text-right">TOTAL :</th>
+                                    <th colspan="4" scope="col" class="text-right">TOTAL $ :</th>
                                     <th scope="col">
                                         <input id="total" name="monto" class="font-weight-bold border-0" readonly style="background-color: white;"></input>
                                     </th>
@@ -160,7 +160,7 @@
                                 <a href="catalogo.html" class="btn btn-info btn-block">Seguir comprando</a>
                             </div>
                             <div class="col-xs-12 col-md-4">
-                                <button href="#" class="btn btn-success btn-block" id="procesar-compra">Realizar compra</button>
+                                <a onclick="getData()" class="btn btn-success btn-block" id="procesar-compra">Realizar compra</a>
                             </div>
                         </div>
                     </form>
@@ -297,15 +297,19 @@
 
         </div>
 
-    <script src="./js/jquery-3.4.1.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/sweetalert2.min.js"></script>
 
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
+
+
+
+    <script src="./js/popper.min.js"></script>
     <script src="./js/carrito.js"></script>
     <script src="./js/compra.js"></script>
+    <script src="./js/nboleta.js"></script>
 
 
 </body>
