--- a/compra.html
+++ b/compra.html
@@ -100,9 +100,13 @@
                         <div class="form-group row">
                             <label for="cliente" class="col-12 col-md-2 col-form-label h2">Cliente :</label>
                             <div class="col-12 col-md-10">
-                                <input type="text" class="form-control" id="cliente"
-                                    placeholder="" value="Camila" name="destinatario" disabled>
+                                <input type="text" class="form-control" id="cliente" placeholder="" value="Florencia Huerta" name="destinatario" disabled>
+                                                                   
                             </div>
+                            <label for="direccion" class="col-12 col-md-2 col-form-label h2">Direccion :</label>
+                            <div  class="col-12 col-md-10">
+                                <input type="text" class="form-control" id="direcion" placeholder="" value="Reñaca Bajo Nuevo horizonte" name="destinatario" disabled>
+                            </div>    
                         </div>
 
                         <div id="carrito" class="form-group table-responsive" >
