--- a/confir_admin.html
+++ b/confir_admin.html
@@ -23,7 +23,7 @@
     <!--Stylesheet-->
 
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/formulario.css">
+    <link rel="stylesheet" href="./css/loginadmin.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
    
@@ -150,7 +150,7 @@
                      Confirmar recuperación de clave .
                 </h3>
                 <input type="text" id="nombreUsuario" placeholder="Nombre Usuario" required>
-                <input type="password" id="pass" placeholder="ingrese una contraseña usando mayusculas, minusculas, números" required>
+                <input type="password" id="pass" placeholder="ingrese nueva contraseña usando mayusculas, minusculas, números" required>
                 <input type="cc-number" id="code" maxlength="6" oninput="if(this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength)" placeholder="introduzca codigo de verificación" required><i>*código enviado a su mail</i> 
 
                 <input type="submit" value="ENVIAR" id="boton"></input>
