--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                       <a class="nav-link" href="./catalogo.html">CATÁLOGO</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">CONDICIONES DE DESPACHO</a>
+                      <a class="nav-link" href="#">DESPACHO</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">OFERTAS</a>
